# SlicerProstateAblation

./: .gitignore  CMakeLists.txt  README.md
ProstateAblation/: CMakeLists.txt  ProstateAblation.py
ProstateAblation/ProstateAblationUtils/: appConfig.py  constants.py  helpers.py  session.py  sessionData.py
ProstateAblation/ProstateAblationUtils/steps/: base.py  intraOperativeGuidance.py  intraOperativeTargeting.py  overview.py  zFrameRegistration.py
ProstateAblation/ProstateAblationUtils/steps/plugins/: buttons.py  case.py  targetsDefinition.py  targetsDefinitionTable.py  targetsDistanceTable.py  training.py
ProstateAblation/Resources/: CryoTemplate-NeedlePath.vtk
ProstateAblation/Resources/Colors/: cryoProstateColors.csv
ProstateAblation/Resources/zframe/: CryoAblationTemplate.csv  ProstateTemplate.csv
ProstateCryoAblation/: CMakeLists.txt  ProstateCryoAblation.py  ProstateCryoAblationZFrameRegistration.py
ProstateCryoAblation/ProstateCryoAblationUtil/: UserEvents.py  appConfig.py  constants.py
ProstateCryoAblation/ProstateCryoAblationUtil/steps/: intraOperativeTargeting.py
ProstateCryoAblation/ProstateCryoAblationUtils/: UserEvents.py  appConfig.py  constants.py  exceptions.py  helpers.py  session.py  sessionData.py
ProstateCryoAblation/ProstateCryoAblationUtils/steps/: base.py  evaluation.py  intraOperativeGuidance.py  intraOperativeTargeting.py  overview.py  segmentation.py  zFrameRegistration.py
ProstateCryoAblation/ProstateCryoAblationUtils/steps/plugins/: buttons.py  case.py  results.py  targeting.py  targets.py  targetsDefinition.py  targetsDefinitionTable.py  targetsDistanceTable.py  training.py
ProstateCryoAblation/ProstateCryoAblationUtils/steps/plugins/segmentation/: automatic.py  base.py  manual.py
ProstateCryoAblation/Resources/: CryoTemplate.vtk  default.cfg
Testing/: CMakeLists.txt  ProstateAblationTests.py  ProstateCryoAblationTests.py
